# ray-tracer

./: CMakeLists.txt  main.cpp
headers/: color.h  ray.h  vec3.h
